# PySlice

./: .gitignore  README.md  kirkland.txt  pyproject.toml
.devcontainer/rocm7.1_ubuntu24.04_py3.12_pytorch_release_2.8.0/: Dockerfile  devcontainer.json
examples/hBN_GAP/: test.py
src/io/: loader.py
src/multislice/: calculators.py  multislice.py  potentials.py  sed.py  trajectory.py
src/postprocessing/: haadf_data.py  tacaw_data.py  wf_data.py
src/pyslice/: __init__.py  backend.py
src/unittests/: 00_probe.py  01_potentials.py  02_propagate.py  02_propagate_otf=False.py  02_propagate_otf=True.py  02b_propagate.py  03_manyprobes.py  04_haadf.py  05_tacaw.py  06_loaders.py  07_defocus.py  08_LACBED.py  08_LACBED_iterative.py  08_LACBED_onthefly.py  08a_LACBED.py  08b_LACBED.py  09_benchmark.py  09_benchmark_propagation.py  09_benchmark_single.py  09_benchmark_wrapper.py  10_midgley.py  11_SED.py  12_aberrations.py  13_enormous.py  BBEditRunTemp-12_aberrations.py  generatePositions.py  haadf-test.npy
tests/: 00_probe.py  01_potentials.py  01_potentials2.py  02_propagate_otf=False.py  02_propagate_otf=True.py  03_manyprobes.py  04_haadf.py  05_tacaw.py  05_tacaw_chunkFFT.py  05_tacaw_cropped.py  06_loaders.py  07_defocus.py  08_LACBED_iterative.py  08_LACBED_onthefly.py  09_benchmark_single.py  09_benchmark_wrapper.py  10_midgley.py  11_SED.py  12_aberrations.py  13_enormous.py  14_backend.py  15_molecular_dynamics.py  16_sea_eco_integration.py  16_signal_inheritance.py  16_to_signal.py  17_FPcifCBED.py  BBEditRunTemp-12_aberrations.py  example.ipynb  kikuchi.py  runAllTests.sh
tests/inputs/: LaTe3_mp-1078612_conventional_standard.cif  (+2 more)
(+20 files in other folders)
