[project]
name = "PySlice"
version = "0.1.0"
description = "PyTorch based package for EELS calculations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ase",
    "dataclasses",
    "ipykernel",
    "jupyter",
    "matplotlib",
    "numpy",
    "ovito",
    "pathlib",
    "scipy",
    "seaborn",
    "tqdm",
    "typing-extensions",
]

[project.optional-dependencies]
test = ["abtem>=1.0.6"]
md = ["orb-models"]

[project.urls]
Homepage = "https://github.com/h-walk/PySlice"

[tool.setuptools.package-data]
mypkg = ["data/*.txt", "data/*.json"]

[tool.hatch.build]
include = [
    "src/pyslice/data/*.txt",
    "src/pyslice/data/*.json",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyslice"]
